# RayTracer

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp  makefile  renderer.cpp
cpp/ray_tracer/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main_ray_tracer.cpp  ray.h  rtweekend_constants.h  sphere.h  vec3.h
cpp/ui/: main_ui.cpp  renderer.hpp
python/: camera.py  main.py  ray.py  rayMarcher.py  sphere.py
